kong/stage-backend/microservice2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2
  namespace: stage-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice2
  template:
    metadata:
      labels:
        app: microservice2
    spec:
      containers:
      - name: microservice1
        image: prasannakumar520/my-node-app:1.0.0-26
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: microservice2
  namespace: stage-backend
spec:
  selector:
    app: microservice1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
